# STT-Studio

./: .env.example  .gitignore  LICENSE  Makefile  NOTICE  PLAN.md  README.md  compose.dev.yml  compose.yml  pyproject.toml
backend/: Dockerfile
backend/src/stt_backend/: __init__.py  config.py  logging.py  main.py
backend/src/stt_backend/routes/: health.py  transcribe.py  ws.py
backend/src/stt_backend/schemas/: transcription.py  ws_messages.py
backend/src/stt_backend/services/: audio.py  vad.py  vllm_client.py
backend/tests/: conftest.py  test_audio.py  test_config.py  test_health.py  test_transcribe.py  test_vad.py  test_vllm_client.py  test_ws.py
docs/: ATTRIBUTIONS.md  GUIDE.md
frontend/: app.js  index.html  style.css  worklet.js
scripts/: bench.sh  bench_wer.py  download_models.sh  logs.sh  setup.sh  smoke_test.sh  start.sh  status.sh  stop.sh  test.sh
serving/qwen/: Dockerfile  entrypoint.sh
serving/whisper/: Dockerfile  entrypoint.sh
